Wrote more on report

--- a/tex/exam.tex
+++ b/tex/exam.tex
@@ -42,12 +42,12 @@
 
 \part{Introduction}
 
-%\input{./introduction}
+\input{./introduction}
 \newpage
 
 \part{Code overview}
 
-%\input{./code_overview}
+\input{./code_overview}
 \newpage
 
 \part{Results and Discussion}
