--- a/tex/problem2C.tex
+++ b/tex/problem2C.tex
@@ -18,7 +18,7 @@ The time-development of all the variables in the SEIIaR model is shown in figure
 	\label{fig:SEIIaR_compare}
 \end{figure}
 
-One prominent feature to notice here, is that the process overall seems to be \textit{slower}, in the sense that it takes longer for people to get infected and eventually recover, but the peaks and asymptotic behaviours seem to align quite closely. This is probably due to the fact that this model includes a period in which people are infected but not yet able to infect anybody else, an incubation period of typical length $\tau_E = 3 \, \mathrm{days}$. This will naturally delay the process, but it should not affect the peak nor the asymptotic behaviour. Ultimately, this shows that the SEIIaR model adds another layer of realism to our model in the sense that people do not get sick right away. Another thing to mention is that the fraction of infected asymptomatic people $I_a$ are always less than the fraction of infected symptomatic people $I$. This is as expected since $f_a < f_s$, and the probabilities of transitioning to either of these states are the same.
+One prominent feature to notice here, is that the process overall seems to be \textit{slower}, in the sense that it takes longer for people to get infected and eventually recover, but the peaks and asymptotic behaviours seem to align quite closely. This is probably due to the fact that this model includes a period in which people are infected but not yet able to infect anybody else: an incubation period of typical length $\tau_E = 3 \, \mathrm{days}$. This will naturally delay the process, but it should not affect the peak nor the asymptotic behaviour. Ultimately, this shows that the SEIIaR model adds another layer of realism to our model in the sense that people do not get sick right away. Another thing to mention is that the fraction of infected asymptomatic people $I_a$ are always less than the fraction of infected symptomatic people $I$. This is as expected since $f_a < f_s$, and the probabilities of transitioning to either of these states are the same.
 
 To test that the implementation is correct --- by comparing with the deterministic and stochastic SIR model --- we adjust the parameters of the SEIIaR to $\beta = 0.25$, $r_s = 1$, $r_a = 1$, $\tau_E = 0$, $\tau_I= 10$ and start with $10$ out of $100 \, 000$ people initially infected. The results of doing $1000$ such simulations and performing the average of the stochastic models is shown in figure \ref{fig:comparison_SIR}. This shows that the two stochastic models are more or less identical, as expected.
 
