--- a/tex/problem2E.tex
+++ b/tex/problem2E.tex
@@ -11,7 +11,7 @@
 
 We use the framework developed in the previous section to simulate a larger system of towns, now with $10$ of them. The population matrix for this system is given in equation (11) in the problem sheet \cite{sheet}. We initialise the system with all people susceptible, except for $25$ exposed in town $2$. The time evolution of $10$ realisations of the different states is shown in figure \ref{fig:commuter_10city}. 
 
-Figure \ref{fig:commuter_10city} clearly shows that the epidemic evolves fastest in town $2$, where it began. This is as expected. Furthermore, we see that the second fastest evolution is in town $1$, which is the closest connection to town $2$ in the sense that the commuters of town $2$ only travels to town $1$. This is also a reassuring fact, indicating a correct implementation. Interestingly, for the towns with more less connections to town $2$ --- e.g. town $9$ and $10$ --- we see that the evolution lags approximately $100$ days behind, and there seems to be a wider spread between each of the $10$ realisations. The increasing spread may be explained by the fact that small delays in each realisation in the beginning become exceedingly large for another town, as some time must naturally pass for the infections to be exported here.
+Figure \ref{fig:commuter_10city} clearly shows that the epidemic evolves fastest in town $2$, where it began. This is as expected. Furthermore, we see that the second fastest evolution is in town $1$, which is the closest connection to town $2$ in the sense that the commuters of town $2$ only travels to town $1$. This is also a reassuring fact, indicating a correct implementation. Interestingly, for the towns with less connections to town $2$ --- e.g. town $9$ and $10$ --- we see that the evolution lags approximately $100$ days behind, and there seems to be a wider spread between each of the $10$ realisations. The increasing spread may be explained by the fact that small delays in each realisation in the beginning become exceedingly large for another town, as some time must naturally pass for the infections to be exported here.
 
 \subsection{b) $356$ city simulation}
 
@@ -28,7 +28,7 @@ $\mathcal{N}(t)$ for 10 realisations of this simulation is shown in figure \ref{
 
 \subsection{c) Reduced number of commuters in $356$ city simulation}
 
-To emulate the effect of making more people work from home, we change the population matrix by dividing the off-diagonal elements by $10$, and adding the remaining number of people to the diagonal. We run the same simulation as above, and display the number municipalities with more than $10$ infected people as a function of time, $\mathcal{N}(t)$,  in figure \ref{fig:infected_Ec}. Clearly, the effect of reduced travelling is to flatten this curve. In figure \ref{fig:infected_Ec} we see that $\mathcal{N}$ saturates after about $100$ days, while in this case it never even reaches the case where $\mathcal{N}$ is $356$. The increase in $\mathcal{N}(t)$ is seen to be much slower in this case, and the peak of the curve occurs after roughly $150$ days. 
+To study the effect of making more people work from home, we change the population matrix by dividing the off-diagonal elements by $10$, rounding to the nearest integer, and adding the remaining number of people to the diagonal. We run the same simulation as above, and display the number municipalities with more than $10$ infected people as a function of time, $\mathcal{N}(t)$,  in figure \ref{fig:infected_Ec}. Clearly, the effect of reduced travelling is to flatten this curve. In figure \ref{fig:infected_Ec} we see that $\mathcal{N}$ saturates after about $100$ days, while in this case it never even reaches the case where $\mathcal{N}$ is $356$. The increase in $\mathcal{N}(t)$ is seen to be much slower in this case, and the peak of the curve occurs after roughly $150$ days. 
 
 
 \begin{figure}[htb]
