Documented the code

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -24,7 +24,7 @@ where $\beta$ is the rate at which susceptible people encounter infected people,
 		-\beta v_1 v_2 /N \\
 		\beta v_1 v_2 - v_2/\tau \\
 		v_1 / \tau
-	\end{bmatrix}= \mathbf{f}(\mathbf{v},t).
+	\end{bmatrix}= \mathbf{f}(t,\mathbf{v}).
 \end{equation}
 
 \subsection{The stochastic SIR model}
