--- a/tex/problem2E.tex
+++ b/tex/problem2E.tex
@@ -28,7 +28,7 @@ $\mathcal{N}(t)$ for 10 realisations of this simulation is shown in figure \ref{
 
 \subsection{c) Reduced number of commuters in $356$ city simulation}
 
-To study the effect of making more people work from home, we change the population matrix by dividing the off-diagonal elements by $10$, rounding to the nearest integer, and adding the remaining number of people to the diagonal. We run the same simulation as above, and display the number municipalities with more than $10$ infected people as a function of time, $\mathcal{N}(t)$,  in figure \ref{fig:infected_Ec}. Clearly, the effect of reduced travelling is to flatten this curve. In figure \ref{fig:infected_Ec} we see that $\mathcal{N}$ saturates after about $100$ days, while in this case it never even reaches the case where $\mathcal{N}$ is $356$. The increase in $\mathcal{N}(t)$ is seen to be much slower in this case, and the peak of the curve occurs after roughly $150$ days. 
+To study the effect of making more people work from home, we change the population matrix by dividing the off-diagonal elements by $10$, rounding to the nearest integer, and adding the remaining number of people to the diagonal. We run the same simulation as above, and display the number municipalities with more than $10$ infected people as a function of time, $\mathcal{N}(t)$,  in figure \ref{fig:infected_Ec}. Clearly, the effect of reduced travelling is to reduce the rate of infection spread. In figure \ref{fig:infected_Ec} we see that $\mathcal{N}$ saturates after about $100$ days, while in figure \ref{fig:infected_Ec} it never even reaches the case where $\mathcal{N}$ is $356$. The increase in $\mathcal{N}(t)$ is seen to be much slower in this case, and the peak of the curve occurs after roughly $150$ days. As $\mathcal{N}(t)$ essentially is a measure of the degree of spread in the infections, we see that the effect of reducing travelling between municipalities reduces the spread of the infections, exactly as we would expect.
 
 
 \begin{figure}[htb]
