--- a/tex/exam.tex
+++ b/tex/exam.tex
@@ -25,7 +25,7 @@
 	\setlength{\parindent}{2em}
 		
 		\begin{abstract}
-		Short abstract
+		We study various models for the time evolution of epidemics, including deterministic and stochastic SIR-models, stochastic SEIIaR models and stochastic SEIIaR commuter models. These are applied to a variety of systems, starting small and towards the end applied on a system representing the working population of Norway. 
 		\end{abstract}
 	\begin{figure}[htb]
 		% front fig ? 
